--- a/Strings.pl.resx
+++ b/Strings.pl.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Exit" xml:space="preserve">
+    <value>Wyjście</value>
+  </data>
   <data name="File" xml:space="preserve">
     <value>Plik</value>
   </data>
